feat: replace ledger webhooks with internal event bus (#6)
* Add outbox events

* Drop webhooks

* Fix some formatting issues

* Update docs

* Fix remaining issues

* Fix some leftovers

* Fix some leftovers

* Fix some small issues

* Move process.env to config object

* Update outbox-publisher.spec.ts
