# apps/server/src/routes/v1/index.ts
@@ -3,7 +3,6 @@ import { allocations } from "./allocations";
 import { availability } from "./availability";
 import { resources } from "./resources";
 import { ledgers } from "./ledgers";
-import { webhooks } from "./webhooks";
 import { policies } from "./policies";
 import { services } from "./services";
 import { bookings } from "./bookings";
@@ -13,7 +12,6 @@ export const v1 = new Hono()
   .route("/ledgers/:ledgerId/resources", resources)
   .route("/ledgers/:ledgerId/allocations", allocations)
   .route("/ledgers/:ledgerId/availability", availability)
-  .route("/ledgers/:ledgerId/webhooks", webhooks)
   .route("/ledgers/:ledgerId/policies", policies)
   .route("/ledgers/:ledgerId/services", services)
   .route("/ledgers/:ledgerId/bookings", bookings);
